@@ -1,0 +1,280 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="he_IL">
+<context>
+    <name>Board</name>
+    <message>
+        <location filename="../src/board.cpp" line="182"/>
+        <source>Success</source>
+        <translation>הצלחה</translation>
+    </message>
+    <message>
+        <location filename="../src/board.cpp" line="182"/>
+        <source>Game Over</source>
+        <translation>המשחק נגמר</translation>
+    </message>
+</context>
+<context>
+    <name>LocaleDialog</name>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="49"/>
+        <source>Select application language:</source>
+        <translation>נא לבחור את שפת היישום:</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="52"/>
+        <source>&lt;System Language&gt;</source>
+        <translation>&lt;שפת מערכת&gt;</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="177"/>
+        <source>Note</source>
+        <translation>הערה</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="177"/>
+        <source>Please restart this application for the change in language to take effect.</source>
+        <translation>נא לאתחל את יישום זה כדי להחיל את השינוי בשפה.</translation>
+    </message>
+</context>
+<context>
+    <name>Window</name>
+    <message>
+        <location filename="../src/window.cpp" line="49"/>
+        <location filename="../src/window.cpp" line="240"/>
+        <source>Peg-E</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="58"/>
+        <source>&amp;Game</source>
+        <translation>&amp;משחק</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="62"/>
+        <source>&amp;New</source>
+        <translation>&amp;חדש</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="62"/>
+        <source>Ctrl+N</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="66"/>
+        <source>&amp;Restart Game</source>
+        <translation>&amp;התחלה מחדש</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="66"/>
+        <source>F5</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="68"/>
+        <source>&amp;Details</source>
+        <translation>&amp;פרטים</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="74"/>
+        <source>Quit</source>
+        <translation>יציאה</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="74"/>
+        <source>Ctrl+Q</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="76"/>
+        <source>&amp;Move</source>
+        <translation>&amp;תור</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="80"/>
+        <source>&amp;Undo</source>
+        <translation>&amp;ביטול</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="80"/>
+        <source>Ctrl+z</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="86"/>
+        <source>&amp;Redo</source>
+        <translation>ביצוע־&amp;חוזר</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="86"/>
+        <source>Shift+Ctrl+Z</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="90"/>
+        <source>&amp;Appearance</source>
+        <translation>&amp;הופעה</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="93"/>
+        <source>Blue</source>
+        <translation>כחול</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="94"/>
+        <source>Charcoal</source>
+        <translation>פחם</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="95"/>
+        <source>Green</source>
+        <translation>ירוק</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="96"/>
+        <source>Midnight</source>
+        <translation>חצות</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="97"/>
+        <source>Plum</source>
+        <translation>שזיף</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="98"/>
+        <source>Red</source>
+        <translation>אדום</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="99"/>
+        <source>Yellow</source>
+        <translation>צהוב</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="117"/>
+        <source>Custom...</source>
+        <translation>מותאם...</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="119"/>
+        <source>&amp;Settings</source>
+        <translation>&amp;הגדרות</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="120"/>
+        <source>Application &amp;Language...</source>
+        <translation>&amp;שפת יישום...</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="122"/>
+        <source>&amp;Help</source>
+        <translation>&amp;עזרה</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="123"/>
+        <source>&amp;About</source>
+        <translation>&amp;אודות</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="124"/>
+        <source>About &amp;Qt</source>
+        <translation>אודות &amp;QT</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="159"/>
+        <source>New Game</source>
+        <translation>משחק חדש</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="163"/>
+        <location filename="../src/window.cpp" line="221"/>
+        <location filename="../src/window.cpp" line="307"/>
+        <source>Original</source>
+        <translation>מקורי</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="164"/>
+        <location filename="../src/window.cpp" line="214"/>
+        <location filename="../src/window.cpp" line="310"/>
+        <source>Branch</source>
+        <translation>מסועף</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="165"/>
+        <location filename="../src/window.cpp" line="217"/>
+        <location filename="../src/window.cpp" line="313"/>
+        <source>Line</source>
+        <translation>שורה</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="175"/>
+        <source>Random</source>
+        <translation>אקראי</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="184"/>
+        <source>Algorithm:</source>
+        <translation>אלגוריתם:</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="185"/>
+        <source>Difficulty:</source>
+        <translation>קושי:</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="186"/>
+        <source>Seed:</source>
+        <translation>זרעים:</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="202"/>
+        <source>Question</source>
+        <translation>שאלה</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="202"/>
+        <source>Do you want to restart?</source>
+        <translation>האם ברצונך להתחיל מחדש?</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="224"/>
+        <source>Details</source>
+        <translation>פרטים</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="224"/>
+        <source>&lt;p&gt;&lt;b&gt;Algorithm:&lt;/b&gt; %1&lt;br&gt;&lt;b&gt;Difficulty:&lt;/b&gt; %2&lt;br&gt;&lt;b&gt;Seed:&lt;/b&gt; %L3&lt;/p&gt;</source>
+        <translation>&lt;p&gt;&lt;b&gt;אלגוריתם:&lt;/b&gt; %1&lt;br&gt;&lt;b&gt;קושי:&lt;/b&gt; %2&lt;br&gt;&lt;b&gt;זרעים:&lt;/b&gt; %L3&lt;/p&gt;</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="237"/>
+        <source>About Peg-E</source>
+        <translation>אודות Peg-E</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="241"/>
+        <source>Peg elimination game</source>
+        <translation>משחק הלוח מחשבת</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="242"/>
+        <source>Copyright &amp;copy; 2009-%1 Graeme Gott</source>
+        <translation></translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="243"/>
+        <source>Released under the &lt;a href=%1&gt;GPL 3&lt;/a&gt; license</source>
+        <translation>משוחרר תחת הרשיון &lt;a href=%1&gt;GPL 3&lt;/a&gt;</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="244"/>
+        <source>Uses icons from the &lt;a href=%1&gt;Oxygen&lt;/a&gt; icon theme</source>
+        <translation>הצלמיות נלקחו מהפרוייקט &lt;a href=%1&gt;Oxygen&lt;/a&gt;</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="245"/>
+        <source>Used under the &lt;a href=%1&gt;LGPL 3&lt;/a&gt; license</source>
+        <translation>בשימוש תחת הרשיון &lt;a href=%1&gt;LGPL 3&lt;/a&gt;</translation>
+    </message>
+</context>
+</TS>
