@@ -1,3 +1,6 @@
+2012-06-01 Isratine Citizen <genghiskhan@gmx.ca>
+	* Add Hebrew translation.
+
 2009-07-25 Graeme Gott <graeme@gottcode.org>
 	* FIXED: Restarting didn't clear saved moves.
 	* FIXED: Background was sometimes misdrawn.
